# Mods

./: .gitattributes  .gitignore  AUTHORS.txt  LICENSE  README.md  hemtt.toml  meta.cpp  mod.cpp
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.json  release-drafter.yml
.github/workflows/: arma.yml  labels.yml  release-drafter.yml  release.yml  rust.yml
.hemtt/: launch.toml  lints.toml  project.toml
addons/ace_anims/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgMoves.hpp  CfgVehicles.hpp  LICENSE  README.md  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/acre/: $PBOPREFIX$  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  initSettings.inc.sqf  initSettings.sqf  initSettings.sqf.h  initSettingsChannelNames.sqf.h  script_component.hpp  stringtable.xml
addons/acre_gestures/: $PBOPREFIX$  CfgMoves.hpp  XEH_postInit.sqf  config.cpp  initSettings.sqf  script_component.hpp  stringtable.xml
addons/admin/: $PBOPREFIX$  adminWhitelist.hpp  config.cpp  script_component.hpp
addons/ai_disembark/: $PBOPREFIX$  README.md  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  initSettings.sqf  script_component.hpp  stringtable.xml
addons/back_to_game/: $PBOPREFIX$  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  initSettings.sqf  initSettings.sqf.h  script_component.hpp  stringtable.xml  teleportDialog.hpp
extension/: Cargo.toml
extension/src/: lib.rs  missions.rs  prometheus.rs  retry.rs  server.rs
tools/: Publish.ps1  Set-Version.ps1  stringtable_validator.py  strintable_validator.py
(+485 files in other folders)
