[package]
name = "armaforces_mods"
version = "0.1.0"
edition = "2018"

[lib]
name = "armaforces_mods"
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "expirement" }
lazy_static = "1.4.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
